Changes for Antoine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="button">
-  <a routerLinkActive="active" routerLink="/jokes" >
+  <a routerLinkActive="active" routerLink='/jokes' >
     <button>I'm tryna giggle fam</button>
   </a>
 </div>
